// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createPost should match the last snapshot 1`] = `
Object {
  "graphql": Object {
    "query": "mutation (
        $type: String
        $title: String
        $details: String
        $communityIds: [String]
        $imageUrls: [String]
        $fileUrls: [String]
        $announcement: Boolean
        $topicNames: [String]
      ) {
        createPost(data: {
          type: $type
          title: $title
          details: $details
          communityIds: $communityIds
          imageUrls: $imageUrls
          fileUrls: $fileUrls
          announcement: $announcement
          topicNames: $topicNames
        }) {
          id
          type
          title
          details
          announcement
          commentersTotal
          updatedAt
          communities {
            id
            name
            slug
          }
          creator {
            id
          }
          attachments {
            id
            position
            type
            url
          }
          topics {
            id
            name
          }
        }
      }",
    "variables": Object {
      "announcement": undefined,
      "communityIds": Array [
        undefined,
      ],
      "details": "details",
      "fileUrls": Array [],
      "imageUrls": Array [],
      "title": "title",
      "topicNames": Array [],
      "type": "post",
    },
  },
  "meta": Object {
    "extractModel": "Post",
  },
  "type": "PostEditor/CREATE_POST",
}
`;

exports[`setDetails should match the last snapshot 1`] = `
Object {
  "payload": "details",
  "type": "PostEditor/SET_DETAILS",
}
`;

exports[`updatePost should match the last snapshot 1`] = `
Object {
  "graphql": Object {
    "query": "mutation ($id: ID
        $type: String
        $title: String
        $details: String
        $communityIds: [String]
        $imageUrls: [String]
        $fileUrls: [String]
        $topicNames: [String]
      ) {
        updatePost(id: $id, data: {
          type: $type
          title: $title
          details: $details
          communityIds: $communityIds
          imageUrls: $imageUrls
          fileUrls: $fileUrls
          topicNames: $topicNames
        }) {
          id
          type
          title
          details
          updatedAt
          announcement
          communities {
            id
            name
            slug
          }
          attachments {
            id
            position
            type
            url
          }
          topics {
            id
            name
          }
        }
      }",
    "variables": Object {
      "communityIds": Array [
        undefined,
      ],
      "details": "details",
      "fileUrls": Array [],
      "id": 1,
      "imageUrls": Array [],
      "title": "title",
      "topicNames": Array [],
      "type": "post",
    },
  },
  "meta": Object {
    "extractModel": Object {
      "append": false,
      "getRoot": [Function],
      "modelName": "Post",
    },
  },
  "type": "PostEditor/UPDATE_POST",
}
`;
